# robochatto

./: .beans.yml  .dockerignore  .gitignore  Dockerfile  bot.py  docker-compose.yaml  pyproject.toml  requirements.txt  robochatto.service
.beans/: robochatto-8cy0--update-robochatto-to-chattolibs-latest-version.md  robochatto-vzhf--add-dockerfile.md  robochatto-wyji--add-docker-composeyaml.md
