[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robochatto"
version = "0.1.0"
description = "A command bot for Chatto webchat, powered by chattolib"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "chattolib",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
